--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -109,50 +109,38 @@
       }
     ]
   },
-
-  {
-    "ID": "4",
-    "title": "React Digital Watch",
-    "description": "A minimalist web application built with React framework that showcases real-time clock functionality. Continuously updates to display current hours, minutes, and seconds in a clean digital interface optimized for responsive viewing.",
-    "detailedDescription": "",
-    "imageSrc": "/assets/projects/project.png",
-    "skills": ["React", "Vite", "CSS"],
-    "demoLink": "https://www.youtube.com",
-    "sourceLink": "https://github.com/bishLam/react-digital-watch",
-    "highlights" : {
-      "src": "/assets/videos/SplitShareDemo.mp4",
-      "type": "mp4",
-      "layout" : "landscape"
-    },
-    "screenshots" : [
-      "assets/screenshots/splitshare/image_1.png",
-      "assets/screenshots/splitshare/image_2.png",
-      "assets/screenshots/splitshare/image_3.png",
-      "assets/screenshots/splitshare/image_4.png"
-    ]
-  },
   {
     "ID": "5",
-    "title" : "To do List Application",
-    "description": "This is a react app which allows users to add, delete and move them up or down based on their priority. It is a simple and easy-to-use application that helps users to keep track of their tasks and manage them efficiently.",
+    "title" : "React Movie App",
+    "description": "This is a react app which allows users to search for movies based on their title. The website uses pulic movie API to get all the movies and displays it on the website.",
+    "detailedDescription": "I developed a simple react vite application to get started with React framework. This website allows the users to browse through movies and have the favourites feature. ",
     "imageSrc": "/assets/projects/project.png",
     "skills": ["React", "Vite", "CSS"],
-    "demoLink": "https://www.youtube.com",
-    "sourceLink": "https://github.com/bishLam/to-do-list",
+    "demoLink": "https://www.youtube.com/embed/VvhqzbnjSjI",
+    "sourceLink": "https://github.com/bishLam/react-movie-website",
     "techs":["React", "Vite", "CSS", "Javascript"],
     "highlights" : {
-      "src": "/assets/videos/SplitShareDemo.mp4",
+      "src": "/assets/videos/moviewebsite.mp4",
       "type": "mp4",
       "layout" : "landscape"
     },
     "screenshots" : [
-      "assets/screenshots/splitshare/image_1.png",
-      "assets/screenshots/splitshare/image_2.png",
-      "assets/screenshots/splitshare/image_3.png",
-      "assets/screenshots/splitshare/image_4.png"
+      "assets/screenshots/movieapp/image_1.png",
+      "assets/screenshots/movieapp/image_2.png"
+    ],
+    "links": [
+      {
+        "name" : "View Source",
+        "source" : "https://github.com/bishLam/react-movie-website",
+        "Logo" : "/assets/contact/githubIcon.png"
+      },
+      {
+        "name" : "View Demo",
+        "source" : "https://www.youtube.com/embed/VvhqzbnjSjI",
+        "Logo" : "/assets/contact/youtubeIcon.png"
+      }
     ]
   },
-
   {
     "ID": "6",
     "title": "Scholarlink Application Design",
