fixed nav bar, cards and card details layout

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -3,8 +3,8 @@
     "ID": "1",
     "title": "SplitShare",
     "description": "Mobile solution for collaborative financial tracking, allowing groups to divide shared costs efficiently. Offers straightforward tools to log expenditures, calculate individual contributions, and maintain transparent payment records across teams.",
-    "detailedDescription" : "I developed a collaborative financial tracking app based on groups that allows every member to upload the bill and share that among each other easily. It offers features such as logging expenditures, calculate individual contributions, and maintain payment records across teams. \nUsed Android Studio with jetpack navigation, Room database designing and gained experience with livedatas for better state management. Some features includes:- \n▷ Use of Fragments, Viewmodel and repository to ensure functional multi-screen flow. \n▷ Usage of native and memory efficient components such as Recyler views.",
-    "imageSrc": "/assets/projects/project.png",
+    "detailedDescription" : "I developed a collaborative financial tracking app based on groups that allows every member to upload the bill and share that among each other easily. It offers features such as logging expenditures, calculate individual contributions, and maintain payment records across teams. \nUsed Android Studio with jetpack navigation, Room database designing and gained experience with livedatas for better state management. Some features includes:- \n▷ Use of Fragments, Viewmodel and repository to ensure functional multi-screen flow. \n▷ Usage of native and memory efficient components such as Recycler views.",
+    "imageSrc": "assets/screenshots/splitshare/demo.png",
     "skills": ["Java", "MVVC", "Android Studio"],
     "demoLink": "https://www.youtube.com/embed/J7GeS_Q7ppI",
     "sourceLink": "https://github.com/bishLam/SplitShare",
@@ -14,7 +14,7 @@
       "type": "mp4",
       "layout" : "phone"
     },
-    "screenshots" : [
+    "screenshots" :[
       "assets/screenshots/splitshare/image_1.png",
       "assets/screenshots/splitshare/image_2.png",
       "assets/screenshots/splitshare/image_3.png",
@@ -33,15 +33,13 @@
       }
     ]
   },
-
-
   {
     "ID": "2",
     "title": "Cinemarvel Reviews",
     "description": "Web platform dedicated to Marvel Cinematic Universe films, featuring authenticated user reviews and ratings. Enables fans to post detailed analyses, read community critiques, and explore aggregated scores for recent superhero releases.",
     "detailedDescription" : "I developed a web platform for Marvel movie enthusiasts. Users can interact throught their favourite or critics movie. This enabled fans to watch movie synopsis, community critiques and could view the average ratings for the movie. Some key features include:- \n▷ Use of Bootstrap ensuring mobile-friendly UI.\n▷ Secure login and registration. \n▷ Authentic user reviews and rating system. \n▷ MySql based data handling with jquery and Ajax requests ",
-    "imageSrc": "/assets/projects/project.png",
-    "skills": ["Bootstraop", "PHP", "Jquery", "MySQL"],
+    "imageSrc": "/assets/screenshots/cinemarvel/demo.png",
+    "skills": ["PHP", "Jquery", "MySQL", "Bootstrap"],
     "demoLink": "https://www.youtube.com/embed/izrMyoG-dfY",
     "sourceLink": "https://github.com/bishLam/CinemarvelReviews",
     "techs": ["PHP", "Bootstrap 5", "MySQL", "Jquery"],
@@ -80,7 +78,7 @@
     "title": "Winform Library App",
     "description": "A dual-interface desktop application for administrators and patrons. Admins handle book catalogs, author databases, and generate usage reports. Users can browse titles, place reservations, and manage borrowings through an intuitive client interface.",
     "detailedDescription": "I developed a dual-interface windows forms application to manage books, authors, language etc from admin side and to reserve and borrow books, return them view their self activities etc. Some features of the application includes:- \n▷ A dual based interface to allow admin manage books and users to explore books. \n▷ Worked with MVC architecture so implemented business logic layer, data access layer and presentation layer. \n▷ Implemented Web Services Layer for seperation of Data access layer with presentation layer. " ,
-    "imageSrc": "/assets/projects/project.png",
+    "imageSrc": "/assets/screenshots/winform/demo.png",
     "skills": [".Net", "ASP.Net", "C#", "MVC"],
     "demoLink": "https://www.youtube.com/embed/8rCD9ffGLXo",
     "sourceLink": "https://github.com/bishLam/library-system-windows-forms-app",
@@ -114,7 +112,7 @@
     "title" : "React Movie App",
     "description": "This is a react app which allows users to search for movies based on their title. The website uses pulic movie API to get all the movies and displays it on the website.",
     "detailedDescription": "I developed a simple react vite application to get started with React framework. This website allows the users to browse through movies and have the favourites feature. ",
-    "imageSrc": "/assets/projects/project.png",
+    "imageSrc": "assets/screenshots/movieapp/image_1.png",
     "skills": ["React", "Vite", "CSS"],
     "demoLink": "https://www.youtube.com/embed/VvhqzbnjSjI",
     "sourceLink": "https://github.com/bishLam/react-movie-website",
@@ -144,9 +142,9 @@
   {
     "ID": "6",
     "title": "Scholarlink Application Design",
-    "description": "A comprehensive UI/UX design project for a digital platform connecting students with academic scholarships based on the prioroties set by the users. Features a user-friendly interface, intuitive navigation, and interactive elements to streamline the scholarship application process.",
+    "description": "A comprehensive UI/UX design project for a digital platform connecting students with academic scholarships based on the prioroties set by the users. Features a user-friendly interface, intuitive navigation, and interactive elements.",
     "detailedDescription": "I designed a comprehensive UI/UX design ensuring intuitive and user-centric standarads. Some features include: \n▷ Intuitive and user friendly design. \n▷ Performed heuristic evaluation tests to ensure user satisfaction. \n▷ Identified and demonstrated user centric design methodologies. \n▷ Created industry standard sketches and wireframes. \n▷ Performed usability testing with pre-testing and post-testing questionnaires to ensure user centric design",
-    "imageSrc": "/assets/projects/project.png",
+    "imageSrc": "/assets/screenshots/scholarlink/demo.png",
     "skills": ["Figma", "Adobe XD","Wireframing"],
     "techs" : ["Figma", "UI", "UX", "Heuristic Evaluation"],
     "demoLink": "https://www.youtube.com/embed/fFh6tGNtoD8",
